# democomp

./: CMakeLists.txt  COPYRIGHT  README.md  run.sh
compsrc/: buf.c  comp.c  comp.h  delta.c  doom.h  main.c  pbuf.h  utils.c  utils.h
dumpsrc/: d_dump.c  dump_patch.diff
src/: buf.h  comp.c  comp.h  delta.h  main.c  pbuf.c  sha256.c  sha256.h  utils.c
